<resources>
    <string name="app_name">BAMXapp</string>
    <string name="usuario">Usuario</string>
    <string name="contraseña">Contraseña</string>
    <string name="iniciar_sesion">Iniciar Sesión</string>
    <string name="Inventario">Inventario</string>
    <string name="Rutas">Rutas</string>
    <string name="Usuario">Usuario</string>
    <string name="Entregas">Entregas</string>
    <string name="Modelo_Static">Modelo:</string>
    <string name="Color_Static">Color:</string>
    <string name="Placas_Static">Placas:</string>
    <string name="Verificacion_Static">Verificación:</string>
    <string name="Poliza_Static">Poliza de Seguro:</string>
    <string name="Poliza">Poliza:</string>
    <string name="Vigencia_licencia">Vigencia de licencia:</string>
    <string name="Entrega1">Entrega 1 - </string>
    <string name="Entrega2">Entrega 2 - </string>
    <string name="Entrega3">Entrega 3 - </string>
    <string name="str_LogOut">Cerrar Sesión</string>
    <string name="Email">Email</string>
    <string name="Cantidad">Cantidad: </string>
    <string name="Producto">Producto: </string>
    <string name="Registro_completado">Registro completado con éxito</string>
    <string name="Menu">Menú</string>
    <string name="Finalizar">Finalizar</string>
    <string name="Confirmar">Confirmar</string>
    <string name="str_abarrotes">Abarrotes</string>
    <string name="str_fruta">Fruta y verdura</string>
    <string name="str_pan">Pan</string>
    <string name="str_nocomestible">No comestibles</string>
    <string name="str_preparada">Comida preparada</string>
    <string name="strEnviar">Enviar</string>
    <string name="Recoleccion">Recolección</string>
    <string name="Recolecciones">Recolecciones</string>
    <string name="Entrega">Entrega</string>
    <string name="Vehiculo">Vehículo</string>
    <string name="Aseguradora">Aseguradora:</string>
    <string name="strLlamar">Llamar</string>
    <string name="strAseguradora">Aseguradora</string>

</resources>