<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2D2D2D"
    android:backgroundTint="#2D2D2D"
    tools:context=".Entregas">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gris_bamx">

        <LinearLayout
            android:id="@+id/LinearLayout"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:background="@color/rojo_bamx"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageButton
                android:id="@+id/btn_back_inventario"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#00FFFFFF"
                android:src="@drawable/ic_back"></ImageButton>


            <ImageView
                android:id="@+id/img_InvLay"
                android:layout_width="82dp"
                android:layout_height="50dp"
                android:layout_marginStart="116dp"
                android:src="@drawable/mercedesbenz" />
        </LinearLayout>

        <ImageView
            android:id="@+id/img_troca"
            android:layout_width="361dp"
            android:layout_height="161dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:src="@drawable/mercedesbenz"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/LinearLayout" />

        <TextView
            android:id="@+id/tv_static_modelo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/omnes_semibold"
            android:text="@string/Modelo_Static"
            android:textColor="#FFFFFF"
            android:textSize="34sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.053"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_troca" />

        <TextView
            android:id="@+id/tv_static_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/omnes_semibold"
            android:text="@string/Color_Static"
            android:textColor="#FFFFFF"
            android:textSize="34sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.048"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_static_modelo" />

        <TextView
            android:id="@+id/tv_static_poliza"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/omnes_semibold"
            android:text="@string/Poliza_Static"
            android:textColor="#FFFFFF"
            android:textSize="34sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.092"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_static_verificacion" />

        <TextView
            android:id="@+id/tv_static_verificacion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/omnes_semibold"
            android:text="@string/Verificacion_Static"
            android:textColor="#FFFFFF"
            android:textSize="34sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.067"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_static_placas" />

        <TextView
            android:id="@+id/tv_static_placas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/omnes_semibold"
            android:text="@string/Placas_Static"
            android:textColor="#FFFFFF"
            android:textSize="34sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.05"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_static_color" />

        <Button
            android:id="@+id/btn_entregas_entregas"
            android:layout_width="175dp"
            android:layout_height="50dp"
            android:layout_marginTop="36dp"
            android:background="@drawable/rounded_corners"
            android:backgroundTint="@color/amarillo_bamx"
            android:fontFamily="@font/omnes_semibold"
            android:text="@string/Entregas"
            android:textColor="#000000"
            android:textSize="24sp"
            app:layout_constraintEnd_toStartOf="@+id/btn_entregas_inventario"
            app:layout_constraintHorizontal_bias="0.347"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_static_poliza" />

        <Button
            android:id="@+id/btn_entregas_inventario"
            android:layout_width="175dp"
            android:layout_height="50dp"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/rounded_corners"
            android:backgroundTint="@color/amarillo_bamx"
            android:fontFamily="@font/omnes_semibold"
            android:text="@string/Inventario"
            android:textColor="#000000"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_static_poliza" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.drawerlayout.widget.DrawerLayout>