<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2D2D2D"
    android:backgroundTint="#2D2D2D"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/img_logov"
        android:layout_width="332dp"
        android:layout_height="230dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logocompleto" />

    <EditText
        android:id="@+id/edt_password"
        android:layout_width="290dp"
        android:layout_height="62dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/rounded_corners"
        android:drawableLeft="@drawable/ic_lock"
        android:drawablePadding="10dp"
        android:ems="10"
        android:fontFamily="sans-serif-medium"
        android:hint="@string/contraseña"
        android:inputType="textPassword"
        android:paddingStart="10dp"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_user" />

    <EditText
        android:id="@+id/edt_user"
        android:layout_width="290dp"
        android:layout_height="62dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:autoText="false"
        android:background="@drawable/rounded_corners"
        android:drawableLeft="@drawable/ic_person"
        android:drawablePadding="10dp"
        android:elegantTextHeight="false"
        android:ems="10"
        android:fontFamily="sans-serif-medium"
        android:freezesText="false"
        android:hint="@string/usuario"
        android:inputType="textPersonName"
        android:paddingStart="10dp"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_logov" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="172dp"
        android:layout_height="64dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/rounded_corners"
        android:backgroundTint="#BF2B2B"
        android:fontFamily="sans-serif-medium"
        android:text="@string/iniciar_sesion"
        android:textSize="16sp"
        app:cornerRadius="50px"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_password" />

</androidx.constraintlayout.widget.ConstraintLayout>