<?xml version="1.0" encoding="utf-8"?>
    <androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#2D2D2D"
        android:backgroundTint="#2D2D2D"
        tools:context=".MainMenu">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gris_bamx">

        <LinearLayout
            android:id="@+id/LinearLayout"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:background="@color/rojo_bamx"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tv_bienvenida"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingStart="30px"
                android:text="Bienvenido, Rafael"
                android:textColor="#FFFFFF"
                android:textSize="28sp" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/LinearLayout">

            <ImageButton
                android:id="@+id/btn_inventario"
                android:layout_width="165dp"
                android:layout_height="150dp"
                android:background="@drawable/rounded_corners25"
                android:padding="35px"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/boxicon" />

            <ImageButton
                android:id="@+id/btn_rutas"
                android:layout_width="165dp"
                android:layout_height="150dp"
                android:layout_marginStart="20dp"
                android:background="@drawable/rounded_corners25"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingBottom="15dp"
                android:paddingTop="5dp"

                android:scaleType="centerInside"
                app:srcCompat="@drawable/mapicon" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/omnes_semibold"
                android:paddingStart="65dp"
                android:text="@string/Inventario"
                android:textColor="#FFFFFF"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/omnes_semibold"
                android:paddingStart="110dp"
                android:text="@string/Rutas"
                android:textColor="#FFFFFF"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

            <ImageButton
                android:id="@+id/btn_recoleccion"
                android:layout_width="165dp"
                android:layout_height="150dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_corners25"
                android:padding="25px"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/deliveryicon" />

            <ImageButton
                android:id="@+id/btn_entregas"
                android:layout_width="165dp"
                android:layout_height="150dp"
                android:layout_marginStart="20sp"
                android:background="@drawable/rounded_corners25"
                android:scaleType="centerInside"
                android:padding="25px"
                app:srcCompat="@drawable/deliverytruckicon" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/omnes_semibold"
                android:paddingStart="47dp"
                android:text="@string/Recolecciones"
                android:textAlignment="textStart"
                android:textColor="#FFFFFF"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="222dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="60dp"
                android:fontFamily="@font/omnes_semibold"
                android:paddingStart="82dp"
                android:text="@string/Entregas"
                android:textColor="#FFFFFF"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/LinearLayoutNew"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout16">

            <ImageButton
                android:id="@+id/btn_usuario"
                android:layout_width="165dp"
                android:layout_height="150dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_corners25"
                android:padding="35px"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/profile" />

            <ImageButton
                android:id="@+id/btn_vehiculo"
                android:layout_width="165dp"
                android:layout_height="150dp"
                android:layout_marginStart="20dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_corners25"
                android:padding="25px"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/pickuptruckicon" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/LinearLayoutNew">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="199dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/omnes_semibold"
                android:paddingStart="82dp"
                android:text="@string/Usuario"
                android:textAlignment="textStart"
                android:textColor="#FFFFFF"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="221dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="60dp"
                android:layout_weight="1"
                android:fontFamily="@font/omnes_semibold"
                android:paddingStart="100dp"
                android:text="@string/Vehiculo"
                android:textColor="#FFFFFF"
                android:textSize="20sp" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.drawerlayout.widget.DrawerLayout>

